WIP - Implement branching in js file

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <div>
             <select name="exp" id="experience" class="custom-select">
                 <option value="">--Please choose an option--</option>
-                <option value="none">Eager to learn</option>
+                <option value="none">Eager to start new</option>
                 <option value="some">Some experience</option>
-                <option value="lot">Well experienced</option>
+                <option value="good">Well experienced</option>
             </select>
           </div>
         </div>
@@ -82,8 +82,8 @@
             <select name="duration" id="duration">
                 <option value="">--Please choose an option--</option>
                 <option value="1_month">1 month</option>
-                <option value="3_month">3 months</option>
-                <option value="5_month">5 months</option>
+                <option value="3_months">3 months</option>
+                <option value="5_months">5 months</option>
             </select>
           </div>
         </div>
